# cmake_testapp

./: CMakeLists.txt  calc.cpp  calc.h  main.cpp
test/: CMakeLists.txt  tests.cpp  tests.h
